--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
-  },
+    },
   "dependencies": {
-    "@line/bot-sdk": "^7.5.2",
-    "express": "^4.18.2",
+    "@supabase/supabase-js": "^2.39.0",
+    "axios": "^1.6.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "@supabase/supabase-client": "^2.39.3"
+    "express": "^4.18.2",
+    "pdfkit": "^0.17.2",
+    "qs": "^6.11.0"
+  },
+  "engines": {
+    "node": "20.x"
   }
-}
